<?xml version="1.0"?>
<package format="2">
  <name>humanoid_robot_manager</name>
  <version>0.3.0</version>
  <description>The humanoid_robot_manager package</description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>

  <url type="website">http://wiki.ros.org/humanoid_robot_manager</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/humanoid_robot/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>humanoid_robot_action_module_msgs</build_depend>
  <build_depend>humanoid_robot_walking_module_msgs</build_depend>
  <build_depend>humanoid_robot_online_walking_module_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_controller</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>humanoid_robot_kinematics_dynamics</build_depend>
  <build_depend>humanoid_robot_balance_control</build_depend>
  <build_depend>open_cr_module</build_depend>
  <build_depend>humanoid_robot_base_module</build_depend>
  <build_depend>humanoid_robot_head_control_module</build_depend>
  <build_depend>humanoid_robot_walking_module</build_depend>
  <build_depend>humanoid_robot_action_module</build_depend>
  <build_depend>humanoid_robot_direct_control_module</build_depend>
  <build_depend>humanoid_robot_online_walking_module</build_depend>
  <build_depend>humanoid_robot_tuning_module</build_depend>
  <build_depend>humanoid_robot_tuning_module_msgs</build_depend>
  <build_depend>humanoid_robot_localization</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>robotis_controller_msgs</build_export_depend>
  <build_export_depend>humanoid_robot_action_module_msgs</build_export_depend>
  <build_export_depend>humanoid_robot_walking_module_msgs</build_export_depend>
  <build_export_depend>humanoid_robot_online_walking_module_msgs</build_export_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>dynamixel_sdk</build_export_depend>
  <build_export_depend>robotis_framework_common</build_export_depend>
  <build_export_depend>robotis_device</build_export_depend>
  <build_export_depend>robotis_controller</build_export_depend>
  <build_export_depend>robotis_math</build_export_depend>
  <build_export_depend>humanoid_robot_kinematics_dynamics</build_export_depend>
  <build_export_depend>humanoid_robot_balance_control</build_export_depend>
  <build_export_depend>open_cr_module</build_export_depend>
  <build_export_depend>humanoid_robot_base_module</build_export_depend>
  <build_export_depend>humanoid_robot_head_control_module</build_export_depend>
  <build_export_depend>humanoid_robot_walking_module</build_export_depend>
  <build_export_depend>humanoid_robot_action_module</build_export_depend>
  <build_export_depend>humanoid_robot_direct_control_module</build_export_depend>
  <build_export_depend>humanoid_robot_online_walking_module</build_export_depend>
  <build_export_depend>humanoid_robot_tuning_module</build_export_depend>
  <build_export_depend>humanoid_robot_tuning_module_msgs</build_export_depend>
  <build_export_depend>humanoid_robot_localization</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>robotis_controller_msgs</exec_depend>
  <exec_depend>humanoid_robot_action_module_msgs</exec_depend>
  <exec_depend>humanoid_robot_walking_module_msgs</exec_depend>
  <exec_depend>humanoid_robot_online_walking_module_msgs</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>robotis_framework_common</exec_depend>
  <exec_depend>robotis_device</exec_depend>
  <exec_depend>robotis_controller</exec_depend>
  <exec_depend>robotis_math</exec_depend>
  <exec_depend>humanoid_robot_kinematics_dynamics</exec_depend>
  <exec_depend>humanoid_robot_balance_control</exec_depend>
  <exec_depend>open_cr_module</exec_depend>
  <exec_depend>humanoid_robot_base_module</exec_depend>
  <exec_depend>humanoid_robot_head_control_module</exec_depend>
  <exec_depend>humanoid_robot_walking_module</exec_depend>
  <exec_depend>humanoid_robot_action_module</exec_depend>
  <exec_depend>humanoid_robot_direct_control_module</exec_depend>
  <exec_depend>humanoid_robot_online_walking_module</exec_depend>
  <exec_depend>humanoid_robot_tuning_module</exec_depend>
  <exec_depend>humanoid_robot_tuning_module_msgs</exec_depend>
  <exec_depend>humanoid_robot_localization</exec_depend>
</package>
