<?xml version="1.0"?>
<package format="2">
  <name>op3_action_module_msgs</name>
  <version>0.3.0</version>
  <description>This package includes ROS messages and services for the ROBOTIS OP3 packages</description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>

  <url type="website">http://wiki.ros.org/op3_action_module_msgs</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/robotis_ros_packages/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Msgs</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Msgs/issues</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
